--- a/app/src/main/res/layout/bottom_sheet_recipes.xml
+++ b/app/src/main/res/layout/bottom_sheet_recipes.xml
@@ -278,6 +278,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
+        style="@style/Widget.MaterialComponents.Button"
         android:text="@string/apply"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
