view pager + overview fragment added

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content" />
 
         <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabs_layout"
             style="@style/customTabLayoutStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
