favourite recipe to detail activity setup

--- a/app/src/main/res/layout/row_layout_favourite.xml
+++ b/app/src/main/res/layout/row_layout_favourite.xml
@@ -11,7 +11,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/recipe_row_layout"
+        android:id="@+id/favourite_recipe_row_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="4dp">
