--- a/app/src/main/res/layout/row_layout_recipe.xml
+++ b/app/src/main/res/layout/row_layout_recipe.xml
@@ -26,13 +26,13 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:strokeColor="@color/lightGray"
+            app:strokeColor="@color/lightMediumGray"
             app:strokeWidth="1dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white">
+                android:background="@color/cardBackGroundColor">
 
                 <ImageView
                     android:id="@+id/image_view_recipe"
@@ -56,7 +56,7 @@
                     android:fontFamily="@font/courgette"
                     android:maxLines="2"
                     android:text="@{result.title}"
-                    android:textColor="@color/darker"
+                    android:textColor="@color/titleColor"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -71,7 +71,7 @@
                     android:ellipsize="end"
                     android:maxLines="3"
                     parseHtml="@{result.summary}"
-                    android:textColor="@color/darkGray"
+                    android:textColor="@color/descriptionColor"
                     app:layout_constraintEnd_toEndOf="@+id/text_view_title"
                     app:layout_constraintStart_toStartOf="@+id/text_view_title"
                     app:layout_constraintTop_toBottomOf="@+id/text_view_title" />
