--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -16,9 +16,9 @@
     <color name="yellow">#FFC114</color>
     <color name="green">#00C980</color>
 
-    <!-- Light Theme  -->
+    <!-- Dark Theme  -->
 
-    <color name="backgroundColor">@color/lightGray</color>
+    <color name="backgroundColor">@color/dark</color>
 
     // Custom chip color
     <color name="checkedChipBackgroundColor">#206200EA</color>
@@ -27,20 +27,21 @@
     <color name="chipTextColor">@color/darkGray</color>
 
     //Custom card view style
-    <color name="strokeColor">@color/lightMediumGray</color>
-    <color name="cardBackGroundColor">@color/white</color>
+    <color name="strokeColor">@color/mediumGray</color>
+    <color name="cardBackGroundColor">@color/darker</color>
     <color name="cardBackGroundLightColor">#106200EA</color>
-    <color name="titleColor">@color/darker</color>
-    <color name="descriptionColor">@color/darkGray</color>
+    <color name="titleColor">@color/lightMediumGray</color>
+    <color name="descriptionColor">@color/mediumGray</color>
 
     //Status Bar
-    <color name="statusBarColor">@color/colorPrimaryDark</color>
+    <color name="statusBarColor">@color/black</color>
     <color name="contextualStatusBarColor">@color/darker</color>
     <color name="contextualActionBarColor">@color/darker</color>
-    <color name="actionBarBackgroundColor">@color/colorPrimary</color>
+    <color name="actionBarBackgroundColor">@color/darker</color>
 
     //Custom bottom navigation
-    <color name="bottomNavBackground">@color/white</color>
-    <color name="bottomNavItemColor">@color/darkGray</color>
-    <color name="bottomNavCheckedItemColor">@color/colorPrimary</color>
+    <color name="bottomNavBackground">@color/dark</color>
+    <color name="bottomNavItemColor">@color/mediumGray</color>
+    <color name="bottomNavCheckedItemColor">@color/colorAccent</color>
+
 </resources>
