dark mode:food joke fragment

--- a/app/src/main/res/layout-night/fragment_food_joke.xml
+++ b/app/src/main/res/layout-night/fragment_food_joke.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/ic_food_joke_background"
+        android:background="@drawable/ic_food_joke_backgound_dark"
         tools:context=".ui.fragments.foodjoke.FoodJokeFragment">
 
         <com.google.android.material.card.MaterialCardView
@@ -37,8 +37,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/cardBackGroundColor"
-                >
+                android:background="@color/cardBackGroundColor">
 
                 <TextView
                     android:id="@+id/text_view_food_joke"
