dark mode:placeholder

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -19,6 +19,7 @@
     <!-- Dark Theme  -->
 
     <color name="backgroundColor">@color/dark</color>
+    <color name="placeholderColor">@color/darker</color>
 
     // Custom chip color
     <color name="checkedChipBackgroundColor">@color/dark</color>
