--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,7 @@
     <!-- Light Theme  -->
 
     <color name="backgroundColor">@color/lightGray</color>
+    <color name="placeholderColor">@color/mediumGray</color>
 
     // Custom chip color
     <color name="checkedChipBackgroundColor">#206200EA</color>
