--- a/app/src/main/res/layout/row_layout_placeholder.xml
+++ b/app/src/main/res/layout/row_layout_placeholder.xml
@@ -9,7 +9,7 @@
         android:id="@+id/view"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:background="@color/mediumGray"
+        android:background="@color/placeholderColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,7 +21,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="12dp"
-        android:background="@color/mediumGray"
+        android:background="@color/placeholderColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/view"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,7 +31,7 @@
         android:layout_width="0dp"
         android:layout_height="65dp"
         android:layout_marginTop="12dp"
-        android:background="@color/mediumGray"
+        android:background="@color/placeholderColor"
         app:layout_constraintEnd_toEndOf="@+id/view1"
         app:layout_constraintStart_toStartOf="@+id/view1"
         app:layout_constraintTop_toBottomOf="@+id/view1" />
@@ -42,7 +42,7 @@
         android:layout_height="36dp"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="12dp"
-        android:background="@color/mediumGray"
+        android:background="@color/placeholderColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/view2"
         app:layout_constraintTop_toBottomOf="@+id/view2" />
@@ -52,7 +52,7 @@
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_marginStart="24dp"
-        android:background="@color/mediumGray"
+        android:background="@color/placeholderColor"
         app:layout_constraintStart_toEndOf="@+id/view3"
         app:layout_constraintTop_toTopOf="@+id/view3" />
 
@@ -61,7 +61,7 @@
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_marginStart="24dp"
-        android:background="@color/mediumGray"
+        android:background="@color/placeholderColor"
         app:layout_constraintStart_toEndOf="@+id/view4"
         app:layout_constraintTop_toTopOf="@+id/view4" />
 
