--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -20,6 +20,8 @@
 
     <color name="backgroundColor">@color/dark</color>
     <color name="placeholderColor">@color/darker</color>
+    <color name="itemColor">@color/mediumGray</color>
+
 
     // Custom chip color
     <color name="checkedChipBackgroundColor">@color/dark</color>
