--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
 
     <color name="backgroundColor">@color/lightGray</color>
     <color name="placeholderColor">@color/mediumGray</color>
+    <color name="itemColor">@color/darker</color>
 
     // Custom chip color
     <color name="checkedChipBackgroundColor">#206200EA</color>
